# frepple

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  ENGINE_REVIEW.md  MODERNIZATION_PLAN.md  djangosettings.py  requirements.txt
.github/workflows/: deploy-staging.yml  engine-asan.yml  engine-clang-tidy.yml  engine-ubsan.yml  forecast-phase7.yml  frontend-e2e.yml  modernization.yml  rust-pilot.yml  ubuntu24.yml
doc/apps/: mlforecast.rst
e2e/: Dockerfile.engine  Dockerfile.frontend  Dockerfile.web  README.md  docker-compose.engine.yml  docker-compose.yml  entrypoint.sh  nginx.conf
e2e/playwright/: .gitignore  global-setup.ts  package-lock.json  package.json  playwright.config.ts
freppledb/: asgi.py  settings.py  urls.py
freppledb/common/: jwtauth.py  middleware.py
freppledb/execute/: models.py
freppledb/forecast/: commands.py  urls.py
freppledb/mlforecast/: __init__.py  commands.py  nixtla.py  tests.py
freppledb/output/: urls.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  PivotScreen.tsx  RecordTable.tsx  TabListScreen.tsx  Toast.tsx
frontend/lib/: api-types.ts  api.ts  apiSchema.ts  auth.ts  csrf.test.ts  csrf.ts  demand.ts  errors.ts  forecast.test.ts  forecast.ts  forecastEdit.test.ts  forecastEdit.ts  forecastSave.ts  inventory.ts  orders.test.ts  orders.ts  pegging.test.ts  pegging.ts  pivot.test.ts  pivot.ts  problems.ts  records.test.ts  records.ts  reschedule.test.ts  reschedule.ts  resource.ts  session.test.ts  session.ts  useDemandList.ts  useForecast.ts  useInventory.ts  usePegging.ts  usePivotReport.ts  useRecordList.ts  useReplan.ts  useSession.ts  useTaskLog.ts  useTaskProgress.ts  ws.test.ts  ws.ts
include/frepple/: model.h  timeline.h  utils.h
rust/frepple-forecast/: Cargo.toml  pyproject.toml
rust/frepple-forecast/src/: capi.rs  common.rs  croston.rs  double_exp.rs  forecast.rs  lib.rs  seasonal.rs  single_exp.rs
rust/frepple-num/: Cargo.toml  pyproject.toml
rust/frepple-num/src/: lib.rs  num.rs
rust/solver-spike/: Cargo.toml
rust/solver-spike/src/: main.rs
src/: CMakeLists.txt
src/forecast/: timeseries.cpp
src/model/: buffer.cpp  calendar.cpp  operationdependency.cpp  operationplan.cpp  problem.cpp
src/solver/: operatordelete.cpp  solveroperation.cpp
src/utils/: python.cpp
test/: invariants.py
test/invariants_1/: invariants_1.xml
test/invariants_sweep/: invariants_sweep.1.expect  invariants_sweep.py
test/pegging_10/: pegging_10.1.expect  pegging_10.xml
test/pegging_11/: pegging_11.1.expect  pegging_11.xml
test/pegging_12/: pegging_12.1.expect  pegging_12.xml
test/pegging_3/: pegging_3.1.expect  pegging_3.xml
test/pegging_4/: pegging_4.1.expect  pegging_4.xml
test/pegging_5/: pegging_5.1.expect  pegging_5.xml
test/pegging_6/: pegging_6.1.expect  pegging_6.xml
test/pegging_7/: pegging_7.1.expect  pegging_7.xml
test/pegging_8/: pegging_8.1.expect  pegging_8.xml
test/pegging_9/: pegging_9.1.expect  pegging_9.xml
test/rust_parity/: forecast_vectors.json  test_forecast_parity.py  test_parity.py  vectors.json
test/stress_1/: stress_1.1.expect  stress_1.py
test/structural_1/: structural_1.xml
test/structural_2/: structural_2.xml
test/structural_3/: structural_3.xml
tools/modernization/: asan_pegging_repro.sh  clang-tidy-baseline.md  (+6 more)
(+35 files in other folders)
